packages/landingpage/components/layout/header/mobile/header.mobile.module.scss
.menuIconContainer {
  display: flex;
  align-items: center;
  position: fixed;
  top: 25px;
  left: 25px;
  gap: 25px;
  z-index: 1;
}

.icon {
  cursor: pointer;
  color: var(--inovex-elements-n-7);
  transition: color 300ms;

  &:hover {
    color: var(--inovex-elements-primary);
  }
}

.menu {
  position: fixed;
  left: 0;
  top: 0;
  z-index: 10;
  transform: translateX(-100%);
  transition: transform 300ms;

  height: 100%;
  width: 200px;
  padding: 20px 33px;

  display: flex;
  flex-direction: column;
  justify-content: space-between;

  background-color: var(--inovex-elements-white);
  box-shadow: 0 3px 10px 0 var(--inovex-elements-n-1);

  &Open {
    transform: translateX(0);
  }
}

.menuItem {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.routes {
  height: 80%;
  overflow: auto;
}

.subRoutes {
  margin-left: 2px;
  display: flex;
  flex-direction: column;
  gap: 16px;

  overflow: hidden;
  height: 0;
  opacity: 0;
  transition: height 0ms 400ms, opacity 400ms 0ms;

  &Expanded {
    height: auto;
    opacity: 1;
    transition: height 0ms 0ms, opacity 600ms 0ms;
  }
}

